package baseline;

import java.util.Date;

public class Task {

    private String title;
    private String description;
    private Date dueDate;

    public Task(String title, String description, String dueDate) {
        // initialize the variables
    }

    public void editDescription(String newDescription) {
        // replace the description with the new one
    }

    public void editDueDate(String newDueDate) {
        // replace the dueDate with the new one
    }

    public String getTitle() {
        // return the title
        return null;
    }

    public String getDescription() {
        // return the description
        return null;
    }

    public String getDueDate() {
        // return the due date
        return null;
    }
}
