package baseline;

import java.util.ArrayList;

public class ToDoListContainer {

    private static final int capacity = 256;
    private ArrayList<ToDoList> container;

    public ToDoListContainer() {
        // initialize the container
    }

    public void addToDoList(ToDoList list) {
        // add List to the container
    }

    public void removeToDoList(ToDoList list) {
        // remove List from the container
    }

    public ArrayList<ToDoList> getContainer() {
        // return the container
        return null;
    }
}
