package controls;

import baseline.Task;
import javafx.scene.layout.VBox;
import java.util.ArrayList;

public class TaskContainerControl extends VBox {

    ArrayList<TaskControl> taskControls;

    public TaskContainerControl() {
        // initialize the list of task controls
        // be sure to include the GUI components from the mockup
    }

    public void addTaskControl(TaskControl control) {
        // add TaskControl to the arraylist
        // make the task control visible
    }

    public void removeTaskControl(Task task) {
        // remove the TaskControl
        // delete
    }
}
