package controls;

import baseline.ToDoListContainer;
import javafx.scene.layout.VBox;

public class ToDoListContainerControl extends VBox {

    private ToDoListContainer container;

    public void addToDoList(String name) {
        // add a ToDoListControl to the scene
        // add that control's ToDoList to the container here
        // add the visual control
    }

    public void removeToDoList(ToDoListControl listControl) {
        // remove a ToDoListControl to the scene
        // remove that control's ToDoList from the container here
        // remove the visual control
    }
}
